Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-3945

QT_TRANSLATE_NOOP does not cover plurals

XMLWordPrintable

    • bc47b51908e218a71a2c2078ff56375e4564c9dc fb33e2a8e82cfc28cf3c3c4bad657e0400640cb2 (qt/qtbase/dev)

      The QT_TRANSLATE_NOOP macro does not cover strings which need plural forms.

      It should be evaluated whether lupdate could simply mark the string for plural translation if it finds %n in it or whether a new macro like QT_TRANSLATE_N_NOOP needs to be introduced.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cerkiewny Mateusz Starzycki
            andysh Andy Shaw
            Votes:
            11 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes