Utility: Better fix for the translation of minutes, seconds, ...

The plural was not translated because of QTBUG-3945. Work around it.
Issue #4855